<resources>
    <string name="app_name">Travelmantics</string>
    <string name="hint_deal_title">Deal Title</string>
    <string name="hint_price_num_only">500 (numbers only)</string>
    <string name="hint_description">Description</string>
    <string name="save">save</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
    <string name="description_deal_thumbnail">deal thumbnail</string>
    <string name="price_value">%1$s</string>
    <string name="take_trip">TAKE TRIP</string>
    <string name="take_trip_price">For %1$s only</string>
</resources>
