<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity">

    <EditText
        android:id="@+id/text_insert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:hint="@string/hint_deal_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/text_insert_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:inputType="numberDecimal"
        android:hint="@string/hint_price_num_only"
        app:layout_constraintTop_toBottomOf="@id/text_insert_title"
        tools:layout_editor_absoluteX="189dp" />

    <EditText
        android:id="@+id/text_insert_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:inputType="text"
        android:hint="@string/hint_description"
        app:layout_constraintTop_toBottomOf="@+id/text_insert_price"
        tools:layout_editor_absoluteX="189dp" />

    <Button
        android:id="@+id/btn_deal_upload_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24dp"
        android:background="@color/colorAccent"
        android:text="@string/upload_image"
        android:textColor="@color/common_google_signin_btn_text_dark"
        app:layout_constraintEnd_toEndOf="@+id/text_insert_description"
        app:layout_constraintStart_toStartOf="@+id/text_insert_description"
        app:layout_constraintTop_toBottomOf="@+id/text_insert_description" />

    <ImageView
        android:id="@+id/image_deal_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_deal_upload_image"
        tools:srcCompat="@android:drawable/screen_background_dark_transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>