<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity">

    <TextView
        android:id="@+id/text_trip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dimen_24sp_title_text"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/hint_deal_title" />

    <TextView
        android:id="@+id/text_trip_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_trip_take_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="For $500 only" />

    <TextView
        android:id="@+id/text_trip_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/text_trip_title"
        app:layout_constraintStart_toStartOf="@+id/text_trip_title"
        app:layout_constraintTop_toBottomOf="@+id/text_trip_title"
        tools:text="@string/hint_description" />

    <Button
        android:id="@+id/btn_trip_take_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/take_trip"
        android:textColor="@color/common_google_signin_btn_text_dark"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/image_trip_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_24dp"
        app:layout_constraintBottom_toTopOf="@+id/text_trip_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_trip_description"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />
</androidx.constraintlayout.widget.ConstraintLayout>